methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:58: error: only classes can have declared but undefined members
def faireLigne()
    ^